--- a/vonline_be/war/partials/adverts.html
+++ b/vonline_be/war/partials/adverts.html
@@ -12,7 +12,7 @@
                 <div class="talks-title-left load-talk">
                     <a ui-sref="profile({ userId : {{advert.userInfo.id}} })" class="avatar short2 pull-left" style="background-image: url('{{ advert.userInfo.avatar }}')"></a>
                     <div class="talks-title-links">
-                        <a ui-sref="profit-single({ advertId : {{advert.id}} })">{{advert.subject}}</a>
+                        <a ui-sref="service-single({ advertId : {{advert.id}} })">{{advert.subject}}</a>
                         <a ui-sref="profile({ userId : {{advert.userInfo.id}} })">{{advert.userInfo.firstName + " "+advert.userInfo.lastName}}</a>
                     </div>
 
