MESSAGE_TO_SHOW

--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -3,6 +3,7 @@
 .login-layout .main-content {
   border: 0;
   margin-right: 0;
+  position: relative;
 }
 .login-container .widget-box {
   visibility: hidden;
