--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1338,6 +1338,25 @@ transform()
   .footer li
     font-size 13px
 
+.message-to-show
+  width 100%
+  text-align center
+  margin-top 8px
+  span
+    color #fff
+    background #ff0000
+    padding 4px 10px
+    display inline-block
+    a
+      color #fff
+      display inline-block
+      margin-left 10px
+      &:hover
+        text-decoration none
+
+.login-layout .message-to-show
+  position absolute
+  top -60px
 
 
 
