--- a/vonline_be/war/partials/neighbours.html
+++ b/vonline_be/war/partials/neighbours.html
@@ -2,7 +2,7 @@
 <section class="nextdoors page" ng-class="base.neighboursLoadStatus"> <!--  ng-show="base.nextdoorsIsActive" -->
 
 <div class="nextdoors">
-    <div class="nextdoors-amount pull-left">Зарегестрировано соседей: <span>{{neighbours.neighboors.length}}</span></div>
+    <div class="nextdoors-amount pull-left">Зарегестрировано соседей: <span>{{neighbours.neighboors.length-1}}</span></div>
 
 
     <form method="post" action="#" class="form-group has-info form-search">
