--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -446,15 +446,14 @@ transform()
         margin-bottom 10px
         font-size 14px
 
-
-.dd-list .topic-right //.topic-item
-  margin-left 60px
-
 .dd .topic-right
     margin-left 95px
 
 .dd-list .dd-list
   padding-left 37px
+  
+.dd-list .dd-list .topic-right //.topic-item
+  margin-left 60px
 
 .one-message
   .like-item
