userName length fix

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -71,6 +71,9 @@ h1 {
 .ace-nav .user-menu {
   right: 0 !important;
 }
+.ace-nav .user-info {
+  max-width: none;
+}
 .ace-nav>.user-short a {
   border: none;
   padding: 3px 8px;
