--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -85,6 +85,9 @@ transform()
 .ace-nav .user-menu
   right 0 !important
 
+.ace-nav .user-info
+  max-width none
+
 .ace-nav>.user-short a
   border none
   padding 3px 8px
