--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -1,5 +1,5 @@
 
-<section class="dialog page" infinite-scroll="dialog.addMoreItems()">
+<section class="dialog page ng-cloak" infinite-scroll="dialog.addMoreItems()">
         <div class="clearfix">
             <div class="dialog-send">
                 <div class="dialog-send-left pull-left">
