--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -74,7 +74,10 @@
 
                         <div class="profile-item last" ng-show="profile.userProfile.contacts.homeAddress != null">
                             <h3>Домашний адрес</h3>
-                            <div>{{profile.userProfile.contacts.homeAddress.street.name + " "+ profile.userProfile.contacts.homeAddress.building.fullNo}}</div>
+                            <div>
+                                {{profile.userProfile.contacts.homeAddress.street.name + " "+ profile.userProfile.contacts.homeAddress.building.fullNo+", этаж"}}
+                                {{profile.userProfile.contacts.homeAddress.floor + ", кв" + profile.userProfile.contacts.homeAddress.flatNo}}
+                            </div>
                         </div>
 
                         <div class="home-map" ng-show="profile.isMayEdit">
