--- a/vonline_be/war/partials/neighbours.html
+++ b/vonline_be/war/partials/neighbours.html
@@ -1,5 +1,5 @@
 
-<section class="nextdoors page ng-cloak" ng-class="base.neighboursLoadStatus"> <!--  ng-show="base.nextdoorsIsActive" -->
+<section class="nextdoors page" ng-class="base.neighboursLoadStatus"> <!--  ng-show="base.nextdoorsIsActive" -->
 
 <div class="nextdoors">
     <div class="nextdoors-amount pull-left">Зарегестрировано соседей: <span>{{neighbours.neighboors.length-1}}</span></div>
