--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -2,7 +2,12 @@
     <div id="dialog-message" class="hide">
         <div class="loadAvatar-area">
             <h2>Загрузите аватар</h2>
-            <button class="btn btn-sm btn-primary no-border load-avatar"><input type="file"/></button>
+
+            <!--<button class="btn btn-sm btn-primary no-border load-avatar">-->
+            <div class="btn btn-sm btn-primary no-border load-avatar">
+                <input type="file"/>
+            </div>
+            <!--</button>-->
         </div>
 
         <div class="crop-area hidden">
