--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -355,6 +355,7 @@ transform()
       h2
         margin-top 0
         font-size 20px
+        padding-right 190px
       .fa-relations
         float right
         font-size 16px
@@ -904,7 +905,8 @@ transform()
   position relative
   border-top 1px solid rgb(80, 144, 193)
   .talks-title-left
-    float left
+    //float left
+    padding-right 130px
     >a
       font-weight bold
       font-size 16px
@@ -923,6 +925,8 @@ transform()
       span
         display inline-block
         margin-right 20px
+  .last-update
+    margin-top -22px
 
 .talks-block
   padding 0 10px
