--- a/vonline_be/war/partials/profit-single.html
+++ b/vonline_be/war/partials/profit-single.html
@@ -24,7 +24,7 @@
                                         <a href="#" title="Редактировать" ng-click="base.setEdit($event,adverts.fullTalkTopic)" class="fa fa-pencil pull-right"></a>
                                     </div>
 
-                                    <a ui-sref="service" class="label label-lg arrowed lenta-item-hashtag pull-right"
+                                    <a ui-sref="profit" class="label label-lg arrowed lenta-item-hashtag pull-right"
                                       ng-class="adverts.fullTalkTopic.tagColor">{{adverts.fullTalkTopic.label}}</a>
 
                                     <div ng-hide="adverts.fullTalkTopic.isEdit">
