--- a/vonline_be/war/partials/profit.html
+++ b/vonline_be/war/partials/profit.html
@@ -9,6 +9,14 @@
             <div ng-if="!adverts.topics || adverts.topics.length == 0" class="empty-messages">{{base.emptyMessage}}</div>
 
             <div class="talks-title" ng-repeat="advert in adverts.topics" id="{{advert.id}}">
+
+                <div class="talks-title-right">
+                    <span class="label label-lg arrowed lenta-item-hashtag pull-right"
+                          ng-class="advert.tagColor">{{advert.label}}</span>
+                    <div class="clearfix"></div>
+
+                </div>
+
                 <div class="talks-title-left load-talk">
                     <a ui-sref="profile({ userId : {{advert.userInfo.id}} })" class="avatar short2 pull-left" style="background-image: url('{{ advert.userInfo.avatar }}')"></a>
                     <div class="talks-title-links">
@@ -17,11 +25,8 @@
                     </div>
 
                 </div>
-                <div class="talks-title-right">
-                                <span class="label label-lg arrowed lenta-item-hashtag pull-right"
-                                      ng-class="advert.tagColor">{{advert.label}}</span>
-                    <div class="clearfix"></div>
 
+                <div class="last-update pull-right">
                     <div class="adverts-comments"><span>{{advert.messageNum}} комментариев</span>  Создано: {{advert.message.created*1000 | date:'dd.MM.yy HH:mm'}}</div>
                 </div>
             </div>
