--- a/vonline_be/war/partials/settings.html
+++ b/vonline_be/war/partials/settings.html
@@ -1,4 +1,4 @@
-<section class="settings page">
+<section class="settings page ng-cloak">
 
         <div class="dynamic">
             <section class="settings">
