--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -177,6 +177,8 @@ transform()
     margin-top 40px
   &.footer-bottom
     padding 20px 0
+    .pull-left
+      padding-left 5px
   &.footer-login
     position absolute
     bottom 0
@@ -532,6 +534,11 @@ transform()
 @media all and (max-width: 1000px)
   .navbar .form-search
     width 10%
+  .create-topic-btn
+    clear right
+    float left !important
+    margin-left 10px
+    margin-top -30px
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
   .sidebar#sidebar
@@ -1340,10 +1347,13 @@ transform()
 .about
   text-align left
   padding-top 10px
+  padding-left 10px
   p,li
     font-size 14px
   .footer li
     font-size 13px
+.contacts
+  padding-left 10px
 
 .message-to-show
   width 100%
