--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -1,6 +1,5 @@
 
 .user-descr
-  padding 0 0 0 10px
   font-size 14px
   .ava-area
     float left
@@ -21,7 +20,7 @@
       font-size 34px
       margin 10px 5px 0 5px
   .text-area
-    margin 0 0 0 10px
+    //margin 0 0 0 10px
     .user-head
       h1
         display inline-block
