--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -802,6 +802,10 @@ transform()
     padding-left 95px
     padding-right 15px
     font-size 12px
+  &:last-child .wallitem-message
+    border-bottom 1px solid #5090c1
+  .wallitem-topic .talks-title
+    border-bottom 0
 
 .answer-block
   width 100%
@@ -911,6 +915,8 @@ transform()
   overflow auto
   position relative
   border-top 1px solid rgb(80, 144, 193)
+  &:last-child
+    border-bottom 1px solid rgb(80, 144, 193)
   .talks-title-left
     //float left
     padding-right 130px
