--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -46,15 +46,13 @@
                             <div ng-show="profile.userProfile.family.childs && profile.userProfile.family.childs.length != 0 && profile.userProfile.family.childs[0].name != '' ">
                                 <h4>Дети: </h4>
                                 <div ng-repeat="child in profile.userProfile.family.childs">
-                                    {{child.name}}
-                                    <span ng-show="child.birthday">, {{child.birthday*1000 | date: 'MM.yyyy'}}</span>
+                                    {{child.name}}<span ng-show="child.birthday">, {{child.birthday*1000 | date: 'MM.yyyy'}}</span>
                                 </div>
                             </div>
                             <div ng-show="profile.userProfile.family.pets != null && profile.userProfile.family.pets.length != 0 && profile.userProfile.family.pets[0].name != ''">
                                 <h4>Питомцы:</h4>
                                 <div ng-repeat="pet in profile.userProfile.family.pets">
-                                    {{pet.name}}
-                                    <span ng-show="pet.typeMeta">, {{pet.typeMeta}}</span>
+                                    {{pet.name}}<span ng-show="pet.typeMeta">, {{pet.typeMeta}}</span>
                                     <span ng-show="pet.breed">, {{pet.breed}}</span>
                                 </div>
 
