--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -162,6 +162,11 @@ transform()
   text-align left
   color #a6a6a6
   border-top 1px solid #CCCCCC
+  .copypast
+    display inline-block
+    vertical-align top
+    position relative
+    top -1px
   ul
     margin 0
     li
