--- a/vonline_be/war/partials/profit-single.html
+++ b/vonline_be/war/partials/profit-single.html
@@ -32,7 +32,23 @@
                                             <span>{{adverts.fullTalkTopic.subject}}</span>
                                         </h2>
 
-                                        <p ng-switch-when="message" class="text">{{adverts.fullTalkTopic.message.content}}</p>
+                                        <div ng-switch-when="message">
+
+                                            <div ng-if="adverts.fullTalkTopic.message.content.length < base.contentLength">
+                                                <div class="text">{{adverts.fullTalkTopic.message.content}}</div>
+                                            </div>
+                                            <div ng-if="adverts.fullTalkTopic.message.content.length >= base.contentLength">
+                                                <div class="text" ng-hide="adverts.fullTalkTopic.message.isFullText">
+                                                    {{adverts.fullTalkTopic.message.content.slice(0,base.contentLength-1)}}
+                                                    <div><a href="#" ng-click="base.toggleFullText(adverts.fullTalkTopic.message)">читать далее...</a></div>
+                                                </div>
+                                                <div class="text" ng-show="adverts.fullTalkTopic.message.isFullText">
+                                                    {{adverts.fullTalkTopic.message.content}}
+                                                    <div><a href="#" ng-click="base.toggleFullText(adverts.fullTalkTopic.message)">свернуть</a></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
 
 
                                     <div class="attached">
@@ -125,7 +141,19 @@
                                             <h2><a ui-sref="profile({userId: {{ firstMessage.userInfo.id }} })">{{ firstMessage.userInfo.firstName +" "+ firstMessage.userInfo.lastName}}</a></h2>
 
                                             <div ng-hide="firstMessage.isEdit">
-                                                <p class="text">{{firstMessage.content}}</p>
+                                                <div ng-if="firstMessage.content.length < base.contentLength">
+                                                    <div class="text">{{firstMessage.content}}</div>
+                                                </div>
+                                                <div ng-if="firstMessage.content.length >= base.contentLength">
+                                                    <div class="text" ng-hide="firstMessage.isFullText">
+                                                        {{firstMessage.content.slice(0,base.contentLength-1)}}
+                                                        <div><a href="#" ng-click="base.toggleFullText(firstMessage)">читать далее...</a></div>
+                                                    </div>
+                                                    <div class="text" ng-show="firstMessage.isFullText">
+                                                        {{firstMessage.content}}
+                                                        <div><a href="#" ng-click="base.toggleFullText(firstMessage)">свернуть</a></div>
+                                                    </div>
+                                                </div>
 
                                                 <div class="attached">
                                                     <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullTalkTopic.id+'-'+firstMessage.id}}" ng-repeat="image in firstMessage.images">
@@ -181,7 +209,19 @@
                                                     <h2><a ui-sref="profile({ userId : {{ message.userInfo.id }} })">{{message.userInfo.firstName+" "+message.userInfo.lastName}}</a></h2>
 
                                                     <div ng-hide="message.isEdit">
-                                                        <p class="text">{{message.content}}</p>
+                                                        <div ng-if="message.content.length < base.contentLength">
+                                                            <div class="text">{{message.content}}</div>
+                                                        </div>
+                                                        <div ng-if="message.content.length >= base.contentLength">
+                                                            <div class="text" ng-hide="message.isFullText">
+                                                                {{message.content.slice(0,base.contentLength-1)}}
+                                                                <div><a href="#" ng-click="base.toggleFullText(message)">читать далее...</a></div>
+                                                            </div>
+                                                            <div class="text" ng-show="message.isFullText">
+                                                                {{message.content}}
+                                                                <div><a href="#" ng-click="base.toggleFullText(message)">свернуть</a></div>
+                                                            </div>
+                                                        </div>
 
                                                         <div class="attached">
                                                             <a href="{{image.URL}}" ng-click="$event.preventDefault()" class="fancybox" rel="attached-group-{{adverts.fullTalkTopic.id+'-'+message.id}}" ng-repeat="image in message.images">
