--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -30,7 +30,19 @@
 
                                 <div ng-hide="wallItem.topic.isEdit">
 
-                                    <div class="text">{{wallItem.topic.message.content}}</div> <!-- ng-switch-when="message" -->
+                                    <div ng-if="wallItem.topic.message.content.length < base.contentLength">
+                                        <div class="text">{{wallItem.topic.message.content}}</div>
+                                    </div>
+                                    <div ng-if="wallItem.topic.message.content.length >= base.contentLength">
+                                        <div class="text" ng-hide="wallItem.topic.isFullText">
+                                            {{wallItem.topic.message.content.slice(0,base.contentLength-1)}}
+                                            <div><a href="#" ng-click="base.toggleFullText(wallItem.topic)">читать далее...</a></div>
+                                        </div>
+                                        <div class="text" ng-show="wallItem.topic.isFullText">
+                                            {{wallItem.topic.message.content}}
+                                            <div><a href="#" ng-click="base.toggleFullText(wallItem.topic)">свернуть</a></div>
+                                        </div>
+                                    </div>
 
                                     <div class="attached" ng-show="wallItem.topic.message.images.length || wallItem.topic.message.documents.length">
                                         <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id}}" ng-repeat="image in wallItem.topic.message.images">
@@ -116,7 +128,20 @@
                                     </div>
 
                                     <div ng-hide="wallMessage.isEdit">
-                                        <div class="text">{{wallMessage.content}}</div>
+
+                                        <div ng-if="wallMessage.content.length < base.contentLength">
+                                            <div class="text">{{wallMessage.content}}</div>
+                                        </div>
+                                        <div ng-if="wallMessage.content.length >= base.contentLength">
+                                            <div class="text" ng-hide="wallMessage.isFullText">
+                                                {{wallMessage.content.slice(0,base.contentLength-1)}}
+                                                <div><a href="#" ng-click="base.toggleFullText(wallMessage)">читать далее...</a></div>
+                                            </div>
+                                            <div class="text" ng-show="wallMessage.isFullText">
+                                                {{wallMessage.content}}
+                                                <div><a href="#" ng-click="base.toggleFullText(wallMessage)">свернуть</a></div>
+                                            </div>
+                                        </div>
 
                                         <div class="attached" ng-show="wallMessage.images.length || wallMessage.documents.length">
                                             <a href="{{image.URL}}" class="fancybox" rel="attached-group-{{wallItem.topic.id+'-'+wallMessage.id}}" ng-repeat="image in wallMessage.images">
