--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -116,6 +116,7 @@
                                         </div>
                                 </div>
                             </div>
+                            <div class="clearfix"></div>
                             <div class="answer-input" ng-show="talks.fullTalkTopic.answerInputIsShow && !talks.fullTalkTopic.isEdit">
                                 <div ng-include="'templates/createMessage.html'" onload="ctrlMessage=talks; ctrlId = talks.fullTalkTopic.id; initCreateMessage(ctrlId);"></div>
 
